--- a/AdminQA/AdminQA.csproj
+++ b/AdminQA/AdminQA.csproj
@@ -37,12 +37,45 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\ClassConversion.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="Forms\Administrator.cs" />
+    <Compile Include="Forms\Administrator.Designer.cs">
+      <DependentUpon>Administrator.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\CreateConfig.cs" />
+    <Compile Include="Forms\CreateConfig.Designer.cs">
+      <DependentUpon>CreateConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs" />
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\FormServiceCalculator.cs" />
+    <Compile Include="Service\FormServiceCalculator.Designer.cs">
+      <DependentUpon>FormServiceCalculator.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Forms\Administrator.resx">
+      <DependentUpon>Administrator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\CreateConfig.resx">
+      <DependentUpon>CreateConfig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Service\FormServiceCalculator.resx">
+      <DependentUpon>FormServiceCalculator.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Forms" />
+    <Folder Include="Service" />
+    <Folder Include="Classes" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
